[package]
name = "pssl"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"]}
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
data-encoding = "2.9"
hkdf = "0.12"
aes = "0.8"
strum_macros = "0.27"
tracing = "0.1"
tracing-rfc-5424 = "0.2"
tracing-subscriber = "0.3"
pcap = { version = "2.4.0" }

sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
md5 = "0"
hex = "0.4"
sha2 = "0.10"
signal-hook = "0.4.1"
flate2 = "1.1.5"
publicsuffix = "2.3.0"
asn-db2 = "0.2.2"
serde_with = "3.16"
parking_lot = "0.12"
log = "0.4.28"
actix-web = "4.12.1"
daemonize-me = "2.0.2"
cipher = "0.4.4"
aes-gcm = "0.10"